# bottarga

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES.md  release.yml
doc/: twitch_client.md
docs/: README.md  audio_player.md  bot_commands.md  bot_external_commands.md  common.md  irc_parser.md  macros.md  main.md  task_manager.md  task_stats.md  technical.md  tts.md  twitch_client.md  user_guide.md  users.md
src/: audio_player.rs  bot_commands.rs  bot_external_commands.rs  common.rs  defs.rs  irc_parser.rs  macros.rs  main.rs  task01.rs  task02.rs  task_manager.rs  task_stats.rs  tts.rs  twitch_client.rs  users.rs
src/twitch_client/: mod.rs  tw_api.rs  tw_client.rs  tw_event_sub.rs  tw_oauth_token.rs  tw_websocket.rs
src/utils/: helpers.rs  logging.rs  macros.rs  mod.rs  web.rs
