[package]
name = "bottarga"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
colored = "3.0.0"
futures = "0.3.31"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros", "tokio-macros", "sync", "time"] }
tokio-tungstenite = { version = "0.26.2", features = ["tokio-native-tls"] }
