[package]
name = "bottarga"
version = "0.1.1"
edition = "2024"
description = "Bottarga is a simle Text to Speech bot for Twitch chat. It can read chat messages and convert them to the voice. Can interact with Twitch Chat. And execute commands from chat. Command are predefined and can be extended."
license-file = "LICENSE"
repository = "https://github.com/icsboyx/bottarga"


[dependencies]
colored = { version = "3.0.0" }
futures = "0.3.31"
tokio = { version = "1.43.0", features = [
  "rt-multi-thread",
  "macros",
  "tokio-macros",
  "sync",
  "time",
  "fs",

] }
tokio-tungstenite = { version = "0.26.2", features = [
  "native-tls",
  "tokio-native-tls",
] }
serde = { version = "1.0.218", features = ["derive"] }
toml = "0.8.20"
tokio-stream = "0.1.17"
serde_json = "1.0.140"
json_to_table = "0.10.0"
msedge-tts = { git = "https://github.com/icsboyx/msedge-tts.git" }
# msedge-tts = "0.2.4"
rand = "0.9.0"
rodio = "0.20.1"
regex = "1.11.1"
kira = "0.10.4"
curl = "0.4.47"
eyre = "0.6.12"


[target.'cfg(not(target_os = "windows"))'.dependencies]
psimple = { package = "libpulse-simple-binding", version = "2.29.0" }
pulse = { package = "libpulse-binding", version = "2.29.0" }
